--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mime": "^4.0.7"
+    "mime": "^4.0.7",
+    "pm2": "^6.0.8"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
