--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,12 @@ testem.log
 Thumbs.db
 
 server/node_modules
+server/.env.development
+server/.env.production
 
 # Dist and release directories
 
 **/dist/
 **/release/
+
+# Ignore environment files
