--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ server/.env.production
 **/release/
 
 # Ignore environment files
+src/environments/environment.development.ts
+src/environments/environment.prod.ts
+src/environments/environment.ts
