--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@angular/material": "^20.0.2",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "ng-angular-popup": "^1.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
