fix: correct README link and update image source in app.html

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
       "dist/",
       "server/dist/",
       "electron/",
-      "package.json"
+      "package.json",
+      "public/"
     ],
     "directories": {
       "output": "release"
